New - Ajout d'un dashboard

--- a/Sheaft.Manage/Views/Companies/Index.cshtml
+++ b/Sheaft.Manage/Views/Companies/Index.cshtml
@@ -2,72 +2,87 @@
 @{
     ViewData["Title"] = "Companies";
     int take = ViewBag.Take;
-    int page = ViewBag.Page;
+    int currentPage = ViewBag.Page;
+    ProfileKind? kind = ViewBag.Kind;
 }
 
-<div class="container">
-    <h1 class="display-4">Companies</h1>
-    <br />
-    @if (ViewBag.Removed != null && ViewBag.Removed)
-    {
-        <div class="alert alert-success alert-dismissible fade show" role="alert">
-            <span>Removed successfully</span>
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
+    <div class="container">
+        <h1 class="display-4">Companies</h1>
+        <br />
+        @if (ViewBag.Removed != null && ViewBag.Removed)
+        {
+            <div class="alert alert-success alert-dismissible fade show" role="alert">
+                <span>Removed successfully</span>
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <br />
+        }
+
+        <div class="btn-group">
+            <label class="btn btn-secondary @(kind == null ? "active": "")">
+                <a asp-controller="Companies" asp-action="Index" asp-route-kind="" asp-route-take="@take" asp-route-page="@currentPage" class="text-white">All</a>
+            </label>
+            <label class="btn btn-secondary @(kind == ProfileKind.Producer ? "active": "")">
+                <a asp-controller="Companies" asp-action="Index" asp-route-kind="@ProfileKind.Producer" asp-route-take="@take" asp-route-page="@currentPage" class="text-white">Producers</a>
+            </label>
+            <label class="btn btn-secondary @(kind == ProfileKind.Store ? "active": "")">
+                <a asp-controller="Companies" asp-action="Index" asp-route-kind="@ProfileKind.Store" asp-route-take="@take" asp-route-page="@currentPage" class="text-white">Stores</a>
+            </label>
         </div>
         <br />
-    }
-    <table class="table table-hover">
-        <thead class="thead-dark">
-            <tr>
-                <th scope="col">Name</th>
-                <th scope="col">CreatedOn</th>
-                <th scope="col">Type</th>
-                <th scope="col"></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var entity in Model)
-            {
+
+        <table class="table table-hover">
+            <thead class="thead-dark">
                 <tr>
-                    <th scope="row">@entity.Name</th>
-                    <td>@entity.CreatedOn</td>
-                    <td>@entity.Kind.ToString("G")</td>
-                    <td>
-                        <a asp-controller="Companies" asp-action="Edit" asp-route-id="@entity.Id" class="btn btn-info">
-                            <i class="fa fa-pen"></i>
-                        </a>
-                        @if (User.IsInRole("ADMIN"))
-                        {
-                            @using (Html.BeginForm("Delete", "Companies", new { id = entity.Id }, FormMethod.Post, true, new { @class = "form d-inline" }))
+                    <th scope="col">Name</th>
+                    <th scope="col">CreatedOn</th>
+                    <th scope="col">Type</th>
+                    <th scope="col"></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var entity in Model)
+                {
+                    <tr>
+                        <th scope="row">@entity.Name</th>
+                        <td>@entity.CreatedOn</td>
+                        <td>@entity.Kind.ToString("G")</td>
+                        <td>
+                            <a asp-controller="Companies" asp-action="Edit" asp-route-id="@entity.Id" class="btn btn-info">
+                                <i class="fa fa-pen"></i>
+                            </a>
+                            @if (User.IsInRole("ADMIN"))
                             {
-                                <button type="submit" class="btn btn-danger">
-                                    <i class="fa fa-trash"></i>
-                                </button>
+                                @using (Html.BeginForm("Delete", "Companies", new { id = entity.Id }, FormMethod.Post, true, new { @class = "form d-inline" }))
+                                {
+                                    <button type="submit" class="btn btn-danger">
+                                        <i class="fa fa-trash"></i>
+                                    </button>
+                                }
                             }
+                        </td>
+                    </tr>
+                }
+            </tbody>
+            <tfoot>
+                <tr class="text-center">
+                    <td colspan="4">
+                        @if (currentPage > 1)
+                        {
+                            <a asp-controller="Companies" asp-action="Index" asp-route-take="@take" asp-route-page="@(currentPage-1)" class="btn btn-info">
+                                <i class="fa fa-caret-left"></i>
+                            </a>
+                        }
+                        @if (take == Model.Count())
+                        {
+                            <a asp-controller="Companies" asp-action="Index" asp-route-take="@take" asp-route-page="@(currentPage+1)" class="btn btn-info">
+                                <i class="fa fa-caret-right"></i>
+                            </a>
                         }
                     </td>
                 </tr>
-            }
-        </tbody>
-        <tfoot>
-            <tr>
-                <td colspan="3">
-                    @if (page > 1)
-                    {
-                        <a asp-controller="Companies" asp-action="Index" asp-route-take="@take" asp-route-page="@(page-1)" class="btn btn-info">
-                            <i class="fa fa-caret-left"></i>
-                        </a>
-                    }
-                    @if (take == Model.Count())
-                    {
-                        <a asp-controller="Companies" asp-action="Index" asp-route-take="@take" asp-route-page="@(page+1)" class="btn btn-info">
-                            <i class="fa fa-caret-right"></i>
-                        </a>
-                    }
-                </td>
-            </tr>
-        </tfoot>
-    </table>
-</div>
+            </tfoot>
+        </table>
+    </div>
