--- a/Sheaft.Manage/Views/_ViewImports.cshtml
+++ b/Sheaft.Manage/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Sheaft.Manage
 @using Sheaft.Manage.Models
 @using Sheaft.Models.Dto
+@using Sheaft.Interop.Enums;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
