--- a/Sheaft.Manage/Views/Companies/Index.cshtml
+++ b/Sheaft.Manage/Views/Companies/Index.cshtml
@@ -13,7 +13,7 @@
         @if (ViewBag.Removed != null)
         {
             <div class="alert alert-success alert-dismissible fade show" role="alert">
-                <span>Successfully removed company @ViewBag.Removed.Name</span>
+                <span>Successfully removed company @ViewBag.Removed</span>
 
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
