--- a/Sheaft.Manage/Views/_ViewImports.cshtml
+++ b/Sheaft.Manage/Views/_ViewImports.cshtml
@@ -1,5 +1,7 @@
 ﻿@using Sheaft.Manage
 @using Sheaft.Manage.Models
 @using Sheaft.Models.Dto
+@using Sheaft.Models.ViewModels
 @using Sheaft.Interop.Enums;
+@using Sheaft.Core.Extensions;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
