Change - Ajustement des controllers pour prendre en compte la notion d'impersonification

--- a/Sheaft.Manage/Views/Companies/Index.cshtml
+++ b/Sheaft.Manage/Views/Companies/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CompanyDto>
+﻿@model IEnumerable<CompanyViewModel>
 @{
     ViewData["Title"] = "Companies";
     int take = ViewBag.Take;
