--- a/Sheaft.Manage/Views/Products/Index.cshtml
+++ b/Sheaft.Manage/Views/Products/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ProductDto>
+﻿@model IEnumerable<ProductViewModel>
 @{
     ViewData["Title"] = "Products";
     int take = ViewBag.Take;
