--- a/Sheaft.Manage/Views/Products/Edit.cshtml
+++ b/Sheaft.Manage/Views/Products/Edit.cshtml
@@ -31,11 +31,11 @@
             <br />
 
             <div class="form-group">
-                @Html.LabelFor(c => c.Name, "Name", new { @class = "form-label" })
+                @Html.LabelFor(c => c.Name, new { @class = "form-label" })
                 @Html.TextBoxFor(c => c.Name, null, new { @class = "form-control" })
             </div>
             <div class="form-group">
-                @Html.LabelFor(c => c.Reference, "Reference", new { @class = "form-label" })
+                @Html.LabelFor(c => c.Reference, new { @class = "form-label" })
                 @Html.TextBoxFor(c => c.Reference, null, new { @class = "form-control" })
             </div>
             <div class="form-group">
@@ -43,7 +43,7 @@
                 @Html.TextBoxFor(c => c.WholeSalePricePerUnit, null, new { @class = "form-control" })
             </div>
             <div class="form-group">
-                @Html.LabelFor(c => c.Vat, "TVA", new { @class = "form-label" })
+                @Html.LabelFor(c => c.Vat, new { @class = "form-label" })
                 @Html.DropDownListFor(c => c.Vat, vats, new { @class = "form-control" })
             </div>
             <div class="form-group">
@@ -51,19 +51,31 @@
                 @Html.TextBoxFor(c => c.QuantityPerUnit, null, new { @class = "form-control" })
             </div>
             <div class="form-group">
-                @Html.LabelFor(c => c.Unit, "Unit", new { @class = "form-label" })
+                @Html.LabelFor(c => c.Unit, new { @class = "form-label" })
                 @Html.DropDownListFor(c => c.Unit, units, new { @class = "form-control" })
             </div>
             <div class="form-group">
-                @Html.LabelFor(c => c.Available, "Available", new { @class = "form-label" })
-                @Html.CheckBoxFor(c => c.Available, new { @class = "form-control" })
+                @Html.LabelFor(m => m.VatPricePerUnit)
+                @Html.TextBoxFor(m => m.VatPricePerUnit, null, new { @class = "form-control", @disabled = "disabled" })
             </div>
             <div class="form-group">
-                @Html.LabelFor(c => c.Description, "Description", new { @class = "form-label" })
-                @Html.TextAreaFor(c => c.Description, new { @class = "form-control" })
+                @Html.LabelFor(m => m.OnSalePricePerUnit)
+                @Html.TextBoxFor(m => m.OnSalePricePerUnit, null, new { @class = "form-control", @disabled = "disabled" })
             </div>
             <div class="form-group">
-                @Html.LabelFor(c => c.Picture, "Picture", new { @class = "form-label" })
+                @Html.LabelFor(m => m.VatPrice)
+                @Html.TextBoxFor(m => m.VatPrice, null, new { @class = "form-control", @disabled = "disabled" })
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.OnSalePrice)
+                @Html.TextBoxFor(m => m.OnSalePrice, null, new { @class = "form-control", @disabled = "disabled" })
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.WholeSalePrice)
+                @Html.TextBoxFor(m => m.WholeSalePrice, null, new { @class = "form-control", @disabled = "disabled" })
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(c => c.Picture, new { @class = "form-label" })
                 @if (!string.IsNullOrWhiteSpace(Model.Picture))
                 {
                     <img src="@Model.Picture" height="100" />
@@ -75,8 +87,16 @@
                 @Html.DropDownListFor(c => c.PackagingId, packagings, new { @class = "form-control" })
             </div>
             <div class="form-group">
-                @Html.LabelFor(c => c.Tags, "Tags", new { @class = "form-label" })
+                @Html.LabelFor(c => c.Tags, new { @class = "form-label" })
                 @Html.ListBoxFor(c => c.Tags, tags, new { @class = "form-control", @style = "height:12rem;" })
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(c => c.Description, new { @class = "form-label" })
+                @Html.TextAreaFor(c => c.Description, new { @class = "form-control" })
+            </div>
+            <div class="form-check">
+                @Html.CheckBoxFor(m => m.Available, new { @class = "form-check-input" })
+                @Html.LabelFor(m => m.Available, new { @class = "form-check-label" })
             </div>
 
             <br />
